# http-server

./: Cargo.toml  README.md  config.toml
content/: index.html
src/: config.rs  main.rs
src/server/: conn.rs  mod.rs  readers.rs  request.rs  response.rs  statuscode.rs
